tests/snapshots/explain__stage_one_jump.snap
---
source: tests/explain.rs
expression: "world.explain(\"tokio\", &cwd)"
---
normalized query: tokio
engine: reference
memory: none
evaluated candidates:
  stage 1 score 92 <tmp>\tokio-lab\tokio
    token 'tokio': base 10 + length 5 + placement 50 + prefix 10 + density 10 = 85
    order bonus +5
    folder bonus +2
eliminated candidates:
  <tmp>\tokio-lab\gone: disappeared
  <tmp>\tokio-lab\helix: current directory
  <tmp>\tokio-lab\tokei: distance 2 > 1
  <tmp>\tokio-lab\zellij: distance 4 > 1
deciding criterion: none (no runner-up)
decision: jump <tmp>\tokio-lab\tokio
