tests/snapshots/explain__stage_two_menu.snap
---
source: tests/explain.rs
expression: "world.explain(\"tokoi\", &cwd)"
---
normalized query: tokoi
engine: reference
memory: none
evaluated candidates:
  stage 2 score 2 <tmp>\tokio-lab\aaa\tokio
    distance 1 (max 1)
  stage 2 score 2 <tmp>\tokio-lab\zzz\tokio
    distance 1 (max 1)
eliminated candidates:
  (none)
deciding criterion: recency
decision: menu
  1) <tmp>\tokio-lab\aaa\tokio
  2) <tmp>\tokio-lab\zzz\tokio
